--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,79 +1,69 @@
 {
 	"env": {
 		"browser": true,
-		"es2021": true
+		"es2021": true,
+		"node": true
 	},
-	"overrides": [
-		{
-			"files": "**/*.+(ts|tsx)",
-			"parser": "@typescript-eslint/parser",
-			"plugins": ["@typescript-eslint"],
-			"extends": ["plugin:@typescript-eslint/recommended"]
-		}
-	],
 	"extends": [
 		"airbnb",
-		"prettier",
-		"eslint:recommended",
+		"airbnb-typescript",
+		"airbnb/hooks",
 		"plugin:react/recommended",
 		"plugin:react-hooks/recommended",
-		"plugin:import/recommended",
-		"plugin:import/errors",
-		"plugin:import/warnings",
-		"plugin:prettier/recommended",
 		"plugin:@typescript-eslint/recommended",
-		"plugin:@typescript-eslint/eslint-recommended"
+		"plugin:import/recommended",
+		"plugin:import/typescript",
+		"plugin:prettier/recommended"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
-		"ecmaVersion": 12,
+		"ecmaVersion": 2021,
 		"sourceType": "module",
 		"ecmaFeatures": {
 			"jsx": true
-		}
+		},
+		"project": "./tsconfig.json"
 	},
-	"plugins": ["react", "@typescript-eslint", "prettier", "react-hooks"],
+	"plugins": ["react", "@typescript-eslint", "import", "react-hooks", "prettier"],
 	"settings": {
 		"react": {
 			"version": "detect"
 		},
 		"import/resolver": {
+			"typescript": {
+				"alwaysTryTypes": true
+			},
 			"node": {
-				"extensions": [".js", ".jsx", ".ts", ".tsx"]
+				"extensions": [".js", ".jsx", ".ts", ".tsx"],
+				"paths": ["src"]
 			}
 		}
 	},
-	"ignorePatterns": ["build/", "dist/", ".eslintrc.json", "package.json", "package-lock.json"],
+	"ignorePatterns": ["build/", "dist/", "node_modules/", "*.config.js", "*.d.ts", "vite-env.d.ts"],
 	"rules": {
-		"no-var": "error",
-		"prefer-const": "warn",
-		"react/jsx-filename-extension": [1, { "extensions": [".jsx", ".tsx"] }],
+		// React 관련
+		"react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
 		"react/prop-types": "off",
-		"import/prefer-default-export": "off",
-		"import/no-extraneous-dependencies": [
-			"error",
-			{ "devDependencies": false, "optionalDependencies": false, "peerDependencies": false }
-		],
-		"import/no-unresolved": "off",
-		"no-console": ["warn", { "allow": ["warn", "error"] }],
-		"prettier/prettier": ["error"],
-		"react-hooks/rules-of-hooks": "error",
-		"react-hooks/exhaustive-deps": "warn",
-		"@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
-		"@typescript-eslint/explicit-module-boundary-types": "off",
-		"react/button-has-type": "off",
+		"react/require-default-props": "off",
 		"react/jsx-props-no-spreading": "off",
-		"react/jsx-no-bind": [
+		"react/react-in-jsx-scope": "off",
+		// Button Type ...
+		"react/button-has-type": "off",
+		"react/function-component-definition": [
 			"error",
 			{
-				"ignoreRefs": true,
-				"allowArrowFunctions": true,
-				"allowFunctions": true,
-				"allowBind": false
+				"namedComponents": "arrow-function",
+				"unnamedComponents": "arrow-function"
 			}
 		],
-		"arrow-body-style": "off",
-		"prefer-arrow-callback": "off",
+
+		// TypeScript 관련
+		"@typescript-eslint/explicit-function-return-type": "off",
+		"@typescript-eslint/explicit-module-boundary-types": "off",
+		"@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+		"@typescript-eslint/consistent-type-imports": ["error", { "prefer": "type-imports" }],
+
+		// Import 관련
 		"import/extensions": [
 			"error",
 			"ignorePackages",
@@ -83,6 +73,39 @@
 				"ts": "never",
 				"tsx": "never"
 			}
-		]
+		],
+		"import/order": [
+			"error",
+			{
+				"groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
+				"newlines-between": "always",
+				"alphabetize": { "order": "asc", "caseInsensitive": true }
+			}
+		],
+		"import/prefer-default-export": "off",
+		"import/no-cycle": "warn",
+		"import/no-extraneous-dependencies": [
+			"error",
+			{
+				"devDependencies": [
+					"**/*.test.{ts,tsx}",
+					"**/*.spec.{ts,tsx}",
+					"**/vite.config.ts", // Vite 설정 파일 예외 추가
+					"**/vitest.config.ts" // 테스트 설정 파일도 포함
+				],
+				"optionalDependencies": false,
+				"peerDependencies": false
+			}
+		],
+
+		// 기타
+		"no-param-reassign": ["error", { "props": false }],
+		"no-console": ["warn", { "allow": ["warn", "error"] }],
+		"prettier/prettier": ["error", { "endOfLine": "auto" }],
+		"arrow-body-style": "off",
+		"consistent-return": "off",
+		"jsx-a11y/anchor-is-valid": "off",
+		"jsx-a11y/click-events-have-key-events": "off",
+		"jsx-a11y/no-static-element-interactions": "off"
 	}
 }
