--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,58 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"],
-      "react-scripts/*": ["node_modules/react-scripts/*"]
-    },
-    "typeRoots": [
-      "node_modules/@types",
-      "src/@types"
-    ],
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
-  },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "build",
-    "dist"
-  ],
+	"compilerOptions": {
+		"target": "es2020",
+		"baseUrl": "./",
+		"paths": {
+			"@/*": ["src/*"]
+		},
+		"typeRoots": ["node_modules/@types", "src/types"],
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"skipLibCheck": true,
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"noFallthroughCasesInSwitch": true,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": false,
+		"emitDeclarationOnly": true, // 선언 파일만 생성
+		"jsx": "react-jsx",
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noImplicitReturns": true,
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"strictBindCallApply": true,
+		"strictPropertyInitialization": true,
+		"downlevelIteration": true,
+		"incremental": true,
+		"composite": true,
+		"declaration": true,
+		"declarationMap": false,
+		"sourceMap": true,
+		"outDir": "./dist",
+		"rootDir": "./src"
+	},
+	"include": [
+		"src/**/*.ts",
+		"src/**/*.tsx",
+		"src/**/*.js",
+		"src/**/*.jsx",
+		"src/**/*.json",
+		"../vite.config.ts"
+	],
+	"exclude": [
+		"node_modules",
+		"build",
+		"dist",
+		"**/*.spec.ts",
+		"**/*.test.ts",
+		"**/*.stories.tsx",
+		"**/*.mock.ts"
+	]
 }
