main 페이지 및 과제package vite 설정 후 빌드

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-	"name": "oz-react-work",
+	"name": "oz-react-main",
 	"version": "0.1.0",
 	"workspaces": [
-		"packages/*",
-		"apps/*"
+		"packages/*"
 	],
 	"private": true,
 	"dependencies": {
