--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
 	"workspaces": [
 		"packages/*"
 	],
+	"type": "module",
 	"private": true,
 	"dependencies": {
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@vitejs/plugin-react": "^5.0.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router-dom": "^7.7.1",
@@ -48,7 +50,6 @@
 		"@types/react-dom": "^19.0.13",
 		"@typescript-eslint/eslint-plugin": "^5.13.0",
 		"@typescript-eslint/parser": "^5.0.0",
-		"@vitejs/plugin-react": "^4.2.1",
 		"eslint": "^8.57.1",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.1.0",
@@ -65,6 +66,6 @@
 		"stylelint-config-prettier": "^9.0.3",
 		"typescript": "^5.4.0",
 		"typescript-eslint": "^8.38.0",
-		"vite": "^5.0.0"
+		"vite": "^5.0.2"
 	}
 }
